--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
       "title": "Bio Signature",
       "icon": {
         "name": "fas fa-signature"
+      },
+      "js": {
+        "forum": "js/forum.js"
       }
     }
   }
