--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "flarum/core": "^1.0"
+    "flarum/core": "^1.0",
+    "fof/user-bio": "^1.1"
   },
   "extra": {
     "flarum-extension": {
